# pluscross

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  SPEC.md
.github/workflows/: ci.yml
julia/PlusCross/: Project.toml  README.md
julia/PlusCross/src/: PlusCross.jl  utils.jl
julia/PlusCross/test/: runtests.jl
julia/WaveformCatalogs/: Project.toml
julia/WaveformCatalogs/src/: WaveformCatalogs.jl
julia/WaveformCatalogs/test/: runtests.jl
python/: README.md  pyproject.toml
python/src/pluscross/: __init__.py  utils.py
python/src/waveform_catalog/: __init__.py
python/tests/: test_roundtrip.py  test_utils.py
tests/cross_language/: check_catalog.jl  check_catalog.py  reference.jl  reference.py  run.sh  write_catalog.jl  write_catalog.py
