[project]
name = "pluscross"
version = "0.1.0"
description = "IO for the waveform_catalog HDF5 format: frequency-domain waveform polarization catalogs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "h5py>=3.10",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pluscross"]
